--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </section>
             </form>
             
-            <div class="output">hello</div>
+            <div id="output">hello</div>
         </main>
 
         <script type="text/javascript" src="js/main.js"></script>
