--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
             
             <div id="output">hello</div>
         </main>
+        <footer>
+            <p>Powered by Team Hygieia HNGi6.0</p>
+        </footer>
 
         <script type="text/javascript" src="js/main.js"></script>
     </body>
