--- a/about.html
+++ b/about.html
@@ -20,20 +20,22 @@
             </nav>
         </header>
         <main>
-            <p>This App is Hygieia Solar Calculator.</p><br>
-            <p>This app helps its user calculate the power consumable by the user  based
-                on the types and number of the appliances used by him/her. The different
-                appliances have their specific power ratings, which we have collated and 
-                incorporated into this app. The only task required by the user is to select 
-                his/her appliances, select the number of each appliance and click on the 
-                calculate comsuption button, which display the message in forming the user of 
-                the total power consumed in kiloWatt.</p><br>
-            <p>Should you possess an appliance and such is not among the options selectable, 
-                kindly reach out to us through our technical head at gentilityisworthwhile@yahoo.com.
-                </p><br>
-                <p>Thanks for using our app.</p>
+            <div class="main"><br><br><br>
+                <p>This App is Hygieia Solar Calculator.</p><br>
+                <p>This app helps its user calculate the power consumable by the user  based
+                    on the types and number of the appliances used by him/her. The different
+                    appliances have their specific power ratings, which we have collated and 
+                    incorporated into this app. The only task required by the user is to select 
+                    his/her appliances, select the number of each appliance and click on the 
+                    calculate comsuption button, which display the message in forming the user of 
+                    the total power consumed in kiloWatt.</p><br>
+                <p>Should you possess an appliance and such is not among the options selectable, 
+                    kindly reach out to us through our technical head at gentilityisworthwhile@yahoo.com.
+                    </p><br>
+                    <p>Thanks for using our app.</p>
+            </div>
         </main>
 
-        <script type="text/javascript" src="js/about.js"></script>
+        <script type="text/javascript" src="./js/about.js"></script>
     </body>
 </html>
