--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                             </tr>
                         </tbody>
                     </table>
-                    <button type="button" id="add" name="add">Add Device</button>
+                    <button type="button" id="add" name="add" title="Not implemented yet">Add Device</button>
                 </section>
 
                 <section id="data-submission">
                     <h3>HYGIEIA<br>SOLAR CALCULATOR</h3>
                     <br><br>
                     <p>Find out how much energy<br>you are consuming</p>
-                    <br><br><br><br>
+                    <br><br><br><br><br>
                     <button type="button" id="total">Total Consumption</button>
                 </section>
             </form>
@@ -114,6 +114,6 @@
             <p>Powered by Team Hygieia HNGi6.0</p>
         </footer>
 
-        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="./js/main.js"></script>
     </body>
 </html>
