--- a/about.html
+++ b/about.html
@@ -35,7 +35,9 @@
                     <p>Thanks for using our app.</p>
             </div>
         </main>
-
+        <footer>
+            <p>Powered by Team Hygieia HNGi6.0</p>
+        </footer>
         <script type="text/javascript" src="./js/about.js"></script>
     </body>
 </html>
