--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
         </header>
         <main>
-            <form action="" method="POST">
+            <form id="form" action="" method="POST">
                 <section id="data-input">
                     <table>
                         <thead>
@@ -103,8 +103,9 @@
                     <h3>HYGIEIA<br>SOLAR CALCULATOR</h3>
                     <br><br>
                     <p>Find out how much energy<br>you are consuming</p>
-                    <br><br><br><br><br>
-                    <button type="button" id="total">Total Consumption</button>
+                    <br><br><br><br>
+                    <button type="button" id="total">Total Consumption</button> 
+                    <button type="button" class="reset" id="reset" title="Reset"><img class="reset" src="./images/reset.png"></button>
                 </section>
             </form>
             
